--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <input type="text" />
     <button>Create</button>
     <div class="container"></div>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
