Added Image Component

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Cosis</title>
   </head>
   <body>
-    <input type="text" />
-    <button>Create</button>
+    <input class="image-input" type="text" />
+    <button class="image-button">Img</button>
     <div class="container"></div>
     <script src="main.js" type="module"></script>
   </body>
