Added button html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <body>
     <input class="image-input" type="text" />
     <button class="image-button">Img</button>
+
+    <input class="button-input" type="text" />
+    <button class="button-button">Button</button>
+
     <div class="container"></div>
     <script src="main.js" type="module"></script>
   </body>
