Added paragraph component

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <input class="button-input" type="text" />
     <button class="button-button">Button</button>
 
+    <input class="paragraph-input" type="text" />
+    <button class="paragraph-button">Paragraph</button>
+
     <div class="container"></div>
     <script src="main.js" type="module"></script>
   </body>
