Added input component and function in main.js

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <input class="paragraph-input" type="text" />
     <button class="paragraph-button">Paragraph</button>
 
+    <input class="input-input" type="text" />
+    <button class="input-button">Input</button>
+
     <div class="container"></div>
     <script src="main.js" type="module"></script>
   </body>
